add privacy policy

--- a/index.html
+++ b/index.html
@@ -157,14 +157,17 @@
 
   <!-- Footer -->
   <footer class="site-footer">
-    <div class="container footer-inner">
-      <div class="footer-brand">
-        <strong>GVN Financial Solutions</strong>
-        <span class="muted">Trusted Bookkeeping, Tax &amp; Financial Advisory</span>
-      </div>
-      <small>© <span id="year"></span> GVN Financial Solutions. All rights reserved.</small>
+  <div class="container footer-inner">
+    <div class="footer-brand">
+      <strong>GVN Financial Solutions</strong>
+      <span class="muted">Trusted Bookkeeping, Tax & Financial Advisory</span>
     </div>
-  </footer>
+    <small>
+      © <span id="year"></span> GVN Financial Solutions. 
+      <a href="privacy.html">Privacy Policy</a>
+    </small>
+  </div>
+</footer>
 
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
